# ProspectLens

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  railway.toml  render.yaml
backend/: .env.example  Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_chat_message_metadata.py  003_pgvector_rag_chunks.py
backend/app/: __init__.py  config.py  database.py  logging_config.py  main.py
backend/app/api/: __init__.py  auth.py  chat.py  chat_tools.py  deps.py  sessions.py  usage.py  workflow.py
backend/app/cache/: context_cache.py
backend/app/graph/: checkpointer.py  graph.py  intel_queries.py  observability.py  qc_utils.py  research_context.py  search_config.py  state.py
backend/app/graph/nodes/: __init__.py  analyze.py  planner.py  (+5 more)
backend/app/models/: __init__.py  session.py
backend/app/observability/: events.py  tracer.py
backend/app/providers/: __init__.py  apollo.py  firecrawl.py  newsapi.py  producthunt.py  tavily.py
backend/app/schemas/: __init__.py
backend/app/services/: auth_service.py  chat_agent.py  chat_service.py  chat_tools.py  report_rag.py  session_service.py  usage_service.py  workflow_service.py
backend/scripts/: e2e_microsoft_test.py  test_langsmith_trace.py  test_producthunt.py
backend/tests/: test_api.py  test_checkpoint_resume.py  test_graph.py  test_graph_execution.py  test_openai_json_parse.py  test_report_normalize.py  test_research_context.py  test_tier1_intel.py
(+189 files in other folders)
