[project]
name = "prospectlens-backend"
version = "0.1.0"
description = "ProspectLens Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "httpx>=0.28.0",
    "langgraph>=0.2.60",
    "langchain-openai>=0.2.14",
    "langchain-core>=0.3.28",
    "langsmith>=0.2.0",
    "redis>=5.2.0",
    "pgvector>=0.3.6",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.1",
    "sse-starlette>=2.1.3",
    "pyjwt>=2.8.0",
    "bcrypt>=4.2.0",
    "email-validator>=2.0.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary]>=3.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0"]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]